re-arranged website structure

--- a/assets/css/DateMe.css
+++ b/assets/css/DateMe.css
@@ -40,7 +40,7 @@ h4 {
 }
 
 .landscape-picture {
-    background-image: url("Me/landscape1.jpg");
+    background-image: url("../../images/Me/landscape1.jpg");
     background-size: cover;
     height: 300px;
 }
