--- a/assets/css/DateMe.css
+++ b/assets/css/DateMe.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0 30%;
+    /* margin: 0 30%; */
     padding: 10px;
     background-image: linear-gradient(to left, rgba(30, 30, 30, 0.432), rgba(74, 74, 74, 0.964));
     background-size: cover;
@@ -50,6 +50,7 @@ h4 {
     padding: 0px 0px;
     margin: 0 0 100px 0;
     vertical-align: top;
+    text-align: center;
 }
 
 #testimonials h4 {
