removing identifying information, using different picture of jay

--- a/assets/css/DateMe.css
+++ b/assets/css/DateMe.css
@@ -57,15 +57,15 @@ h4 {
     text-align: center;   
 }
 
-#jill {
+#jay {
     height: 300px;
 }
 
-#jenna {
+#juliet {
     height: 230px;
 }
 
-#travis {
+#trevor {
     height: 250px;
 }
 
